<resources>
    <string name="app_name">Marvel Store</string>
    <string name="first_page">1</string>
    <string name="second_page">2</string>
    <string name="thirty_page">3</string>
    <string name="addToCart">Add To Cart</string>
    <string name="about">About this Comic</string>
    <string name="thisIsRare">This is a rare Comic</string>
    <string name="aboutTest">hbhjijnbjkkjn asf asoifj asçdfi sjifaçsjdfçdj fsjf çasjidfaçsdjf çasdfço sijfças fasiojde fçesheg çaesg açewjg çwejgçsgçahgeç eoaiwjçaweogihç fewhçahegçeabg eaçwg ewçhg çeahig çhgaçer ghçseghçeagbrebaiçur.</string>

    <string name="discountCoupon">Discount Coupon</string>
    <string name="total">Total Value</string>
    <string name="keepbuying">Keep Buying</string>
    <string name="finish">Finish</string>
    <string name="apply">Apply</string>
</resources>