<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin"
    android:background="@color/backgroundColor"
    tools:context="com.example.marvelstore.view.ComicActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/thumb"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_weight="2"
                android:src="@drawable/ilustracao_retrato"/>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_weight="3"
                android:layout_marginLeft="@dimen/margin"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/description_title"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="3"
                    android:text="Titulo"
                    android:fontFamily="sans-serif-condensed"
                    android:textStyle="bold"
                    android:textColor="@color/titleDescriptionColor"
                    android:textSize="@dimen/titleDescriptionSize" />

                <TextView
                    android:id="@+id/price_description"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="3"
                    android:text="USD 0,00"
                    android:fontFamily="sans-serif-condensed"
                    android:textColor="@color/titleDescriptionColor"
                    android:textSize="@dimen/priceDescriptionSize" />

                <Button
                    android:id="@+id/cart"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:text="@string/addToCart"
                    android:textSize="15sp"/>
            </LinearLayout>
        </LinearLayout>
        <TextView
            android:layout_marginTop="@dimen/margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/titleDescriptionSize"
            android:fontFamily="sans-serif-condensed"
            android:textColor="@color/titleDescriptionColor"
            android:text="@string/about"/>
        <TextView
            android:id="@+id/about"
            android:layout_marginTop="@dimen/aboutMargin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aboutTest"
            android:textColor="@color/aboutComicColor"
            android:textSize="@dimen/aboutContent"/>-->
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>