<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.marvelstore.view.HomeActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/margin"
        android:background="@color/backgroundColor">
        <LinearLayout
            android:id="@+id/progress"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:visibility="gone">
            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/fragment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <fragment
                android:id="@+id/list_comics_fragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:name="com.example.marvelstore.view.fragments.ComicFragment"/>
        </LinearLayout>

        <RelativeLayout
            android:padding="@dimen/padding_menu_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/first_page"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="@dimen/padding_menu_buttons"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/first_page_24_dp" />
                <ImageView
                    android:id="@+id/back"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="@dimen/padding_menu_buttons"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/back_icon_24dp"
                    android:visibility="visible"/>
                <Button
                    android:id="@+id/first_button"
                    android:layout_width="@dimen/size_button"
                    android:layout_height="@dimen/size_button"
                    android:background="@color/selectColorButton"
                    android:visibility="visible"
                    android:text="@string/first_page"/>
                <Button
                    android:id="@+id/second_button"
                    android:layout_marginHorizontal="@dimen/padding_menu_buttons"
                    android:layout_width="@dimen/size_button"
                    android:layout_height="@dimen/size_button"
                    android:background="@color/backgroundButtonsColors"
                    android:visibility="visible"
                    android:text="@string/second_page"/>
                <Button
                    android:id="@+id/thirty_button"
                    android:layout_width="@dimen/size_button"
                    android:layout_height="@dimen/size_button"
                    android:background="@color/backgroundButtonsColors"
                    android:visibility="visible"
                    android:text="@string/thirty_page"/>
                <ImageView
                    android:id="@+id/forward"
                    android:layout_gravity="center"
                    android:paddingHorizontal="@dimen/padding_menu_buttons"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/forward_icon_24dp"
                    android:visibility="visible"/>
                <ImageView
                    android:id="@+id/last_page"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="@dimen/padding_menu_buttons"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/last_page_24" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>